fix:added more width in header-list-wrap

--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -94,7 +94,8 @@
     width: 31%;
 
     @include tabletLarge {
-      width: 34%;
+      // width: 34%;
+      width: 46%;
     }
 
     @include tablet {
@@ -103,6 +104,7 @@
   }
   &-list {
     display: flex;
+    justify-content: center;
   }
   &-list-item {
     margin-right: 20px;
